# LEGO

./: CMakeLists.txt  README.md
libs/: README.md  paillier.h
libtorch-1.2/: README.md
src/: CMakeLists.txt
src/gc/: README.md  gc.cpp  gc.h
src/test/: paillier.py  test_func.cpp  test_mod.py  test_triplets.cpp
src/train/cifar10/: cifarconv.cpp  cifardata.cpp
src/train/convnetworks/: cifarconv.cpp  mnistconv.cpp
src/train/fashionmnist/: fashiondata.cpp  fashionnet.cpp
src/train/linear/: bin_mnistlinear.cpp
src/train/logistic/: bin_mnistlog.cpp  gisettelog.cpp  mnistlog.cpp
src/train/networks/: mnistnet.cpp  quotient.cpp
src/utils/: dataloader.hpp  dataprocess.cpp  debug.hpp
